[maven-release-plugin] prepare release 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.samourai.code.whirlpool</groupId>
 	<artifactId>java-websocket-server</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>java-websocket-server</name>
 	<properties>
 		<project.scm.id>samourai</project.scm.id>
