--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.samourai.code.wallet</groupId>
 	<artifactId>java-websocket-server</artifactId>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>java-websocket-server</name>
 	<properties>
 		<project.scm.id>samourai</project.scm.id>
-		<spring-boot.version>2.1.6.RELEASE</spring-boot.version>
-		<spring-websocket.version>5.1.6.RELEASE</spring-websocket.version>
-		<spring-security.version>5.1.5.RELEASE</spring-security.version>
+		<spring-boot.version>2.6.0</spring-boot.version>
+		<spring-websocket.version>5.3.13</spring-websocket.version>
+		<spring-security.version>5.6.0</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-messaging</artifactId>
-			<version>${spring-websocket.version}</version>
+			<version>${spring-security.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>io.samourai.code.wallet</groupId>
 			<artifactId>extlibj</artifactId>
-			<version>0.0.18-fetchWallet</version>
+			<version>0.0.27-SNAPSHOT</version>
 		</dependency>
 		<!-- test -->
 		<dependency>
@@ -84,7 +84,7 @@
 			<plugin>
 				<groupId>com.coveo</groupId>
 				<artifactId>fmt-maven-plugin</artifactId>
-				<version>2.6.0</version>
+				<version>2.9</version>
 				<executions>
 					<execution>
 						<goals>
