--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>io.samourai.code.wallet</groupId>
 			<artifactId>extlibj</artifactId>
-			<version>0.0.27-SNAPSHOT</version>
+			<version>0.0.27</version>
 		</dependency>
 		<!-- test -->
 		<dependency>
