--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.samourai.code.wallet</groupId>
 	<artifactId>java-websocket-server</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3-SNAPSHOT</version>
 	<name>java-websocket-server</name>
 	<properties>
 		<project.scm.id>samourai</project.scm.id>
-		<spring-boot.version>2.6.0</spring-boot.version>
-		<spring-websocket.version>5.3.13</spring-websocket.version>
-		<spring-security.version>5.6.0</spring-security.version>
+		<spring-boot.version>2.6.2</spring-boot.version>
+		<spring-websocket.version>5.3.14</spring-websocket.version>
+		<spring-security.version>5.6.1</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>io.samourai.code.wallet</groupId>
 			<artifactId>extlibj</artifactId>
-			<version>0.0.27</version>
+			<version>0.0.28</version>
 		</dependency>
 		<!-- test -->
 		<dependency>
