--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.samourai.code.wallet</groupId>
 	<artifactId>java-websocket-server</artifactId>
-	<version>1.0.5</version>
+	<version>develop-SNAPSHOT</version>
 	<name>java-websocket-server</name>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -126,6 +126,6 @@
 	</repositories>
 	<scm>
 		<connection>scm:git:https://code.samourai.io/whirlpool/java-websocket-server.git</connection>
-		<tag>1.0.5</tag>
+		<tag>1.0.4</tag>
 	</scm>
 </project>
