--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.samourai.code.wallet</groupId>
 	<artifactId>java-websocket-server</artifactId>
-	<version>develop-SNAPSHOT</version>
+	<version>1.0.6-SNAPSHOT</version>
 	<name>java-websocket-server</name>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>io.samourai.code.wallet</groupId>
 			<artifactId>extlibj</artifactId>
-			<version>1.0.0-dexwp-beta3</version>
+			<version>1.0.0-beta6</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- test -->
@@ -101,7 +101,6 @@
 				<version>3.0.1</version>
 				<configuration>
 					<tagNameFormat>@{project.version}</tagNameFormat>
-					<developmentVersion>develop-SNAPSHOT</developmentVersion>
 				</configuration>
 			</plugin>
 			<plugin>
